<resources>
    <string name="app_name">"Fresh System Services"</string>
    <string name="zest_relative_link_advanced">"Advanced settings"</string>
    <string name="zest_relative_link_wallpaper">"Home and lock screen wallpaper"</string>
    <string name="zest_relative_link_themes">"Samsung Themes"</string>
    <string name="zest_data_connection_icon_default">"Default (4G)"</string>
    <string name="zest_data_connection_icon_lte">"LTE"</string>
    <string name="zest_data_connection_icon_next">"Next (5G)"</string>
    <string name="zest_wlan_connection_icon_default">"Default"</string>
    <string name="zest_wlan_connection_icon_uplus">"LG U+"</string>
    <string name="zest_wlan_connection_icon_kt">"KT"</string>
    <string name="zest_app_version">"About Zest"</string>
    <string name="zest_setting_default_summary">"Unknown"</string>
    <string name="zest_setting_default_error">"Something went wrong"</string>
    <string name="zest_system_settings_plugin_title">"Zest"</string>
    <string name="zest_system_settings_plugin_summary">"Customization  •  Screen resolution"</string>
    <string name="zest_system_settings_plugin_summary_snowcone">"Screen resolution  •  Software updates"</string>
    <string name="zest_data_connection_icon_title">"Data connection icon style"</string>
    <string name="zest_wlan_connection_icon_title">"Wi-Fi signal icon style"</string>
    <string name="fresh_firmware_version">"Fresh version"</string>
    <string name="fresh_ota_main_title">"Software update"</string>
    <string name="fresh_ota_check_for_updates_title">"Download and install"</string>
    <string name="fresh_ota_check_for_updates_summary">"Downloading via mobile networks may result in additional charges. If possible, download via a Wi-Fi network instead."</string>
    <string name="fresh_ota_auto_download_wlan_title">"Auto download over Wi-Fi"</string>
    <string name="fresh_ota_auto_download_wlan_summary">"Download software updates automatically when connected to a Wi-Fi network."</string>
    <string name="fresh_ota_last_successful_update_title">"Last update"</string>
    <string name="fresh_ota_last_successful_update_summary">"There's no information about this update."</string>
    <string name="fresh_ota_check_frequency_title">"Update check frequency"</string>
    <string name="fresh_ota_check_frequency_60min">"Every hour"</string>
    <string name="fresh_ota_check_frequency_120min">"Every 2 hours"</string>
    <string name="fresh_ota_check_frequency_180min">"Every 3 hours"</string>
    <string name="fresh_ota_check_frequency_360min">"Every 6 hours"</string>
    <string name="fresh_ota_check_frequency_720min">"Every 12 hours"</string>
    <string name="fresh_ota_check_frequency_1440min">"Every day"</string>
    <string name="fresh_ota_changelog_header_title">"What's New"</string>
    <string name="fresh_ota_changelog_header_subtitle">"Find out what's included in this Fresh update."</string>
    <string name="fresh_ota_changelog_detail_version">"Version:"</string>
    <string name="fresh_ota_changelog_detail_size">"Size:"</string>
    <string name="fresh_ota_changelog_detail_security_patch_level">"Security patch level:"</string>
    <string name="fresh_ota_changelog_appbar_install">"Fresh %1$s %2$s is ready to install"</string>
    <string name="fresh_ota_changelog_appbar_downloading">"Downloading update…"</string>
    <string name="fresh_ota_changelog_appbar_downloading_subtitle">"Time Left: %s"</string>
    <string name="fresh_ota_changelog_appbar_detail">"Update your phone and get new features"</string>
    <string name="fresh_ota_changelog_appbar_detail_subtitle">"Using mobile data to download may result in additional charges. Using Wi-Fi is recommended."</string>
    <string name="zest_addon_management_title">"Manage addons"</string>
    <string name="zest_addon_management_subtitle_none">"No addons installed"</string>
    <string name="zest_addon_management_subtitle_singular">"1 addon installed"</string>
    <string name="zest_addon_management_subtitle_multiple">"%1$d addons installed"</string>
    <string name="zest_addon_management_detail_uninstall">"Uninstall"</string>
    <string name="zest_addon_management_detail_cancel">"Cancel"</string>
    <string name="zest_addon_management_detail_uninstall_confirmation">"Are you sure you want to uninstall %1$s?"</string>
    <string name="zest_addon_management_detail_size">"Size"</string>
    <string name="zest_addon_management_detail_version">"Version"</string>
    <string name="zest_addon_management_detail_developer">"Developer"</string>
    <string name="zest_addon_management_detail_last_updated">"Last updated"</string>
    <string name="zest_renoir_settings_title">"Color Theme"</string>
    <string name="zest_renoir_settings_summary">"Customize One UI by adapting the theme with your current wallpaper."</string>
    <string name="zest_renoir_notification_channel_title">"Ongoing notifications"</string>
    <string name="zest_renoir_notification_channel_description">"This notification channel allows the app to execute operations needed in the background."</string>
    <string name="zest_renoir_notification_description">"Changing device theme based on wallpaper…"</string>
    <string name="zest_renoir_settings_unavailable">"Color-matching Theme is not available because a third-party theme is applied."</string>
    <string name="zest_renoir_settings_lock_screen">"Use lock screen colors"</string>
    <string name="zest_renoir_settings_lock_screen_description">"Use colors from your lock screen wallpaper in picking the device theme."</string>
    <string name="zest_renoir_settings_custom_colors">"Use custom colors"</string>
    <string name="zest_renoir_settings_custom_colors_desc">"Use colors from the color picker for the device theme."</string>
    <string name="zest_screen_resolution_setting_title">"Screen resolution"</string>
    <string name="zest_screen_resolution_setting_summary">"Some apps may close when you change the resolution."</string>
    <string name="zest_screen_resolution_setting_high_summary">"Sharpest visuals, most battery use"</string>
    <string name="zest_screen_resolution_setting_medium_summary">"Improved visuals, moderate battery use"</string>
    <string name="zest_screen_resolution_setting_low_summary">"Ugly visuals, lowest battery use"</string>
    <string name="zest_screen_resolution_setting_btn_apply">"Apply"</string>
    <string name="zest_hdr_effect_setting_title">"Video brightness"</string>
    <string name="zest_hdr_effect_setting_summary">"Enhance the image quality of your videos to enjoy brighter and more vivid colors."</string>
    <string name="zest_hdr_effect_setting_available_apps">"Available apps"</string>
    <string name="zest_maverick_security_setting_title">"USB security"</string>
    <string name="zest_maverick_security_setting_summary">"Protect your device from malicious USB devices."</string>
    <string name="zest_maverick_security_setting_activity_summary">"Protect your device from malicious USB devices by blocking access while the device is locked."</string>
    <string name="zest_maverick_security_setting_option_title">"Restrict USB devices"</string>
    <string name="zest_maverick_security_setting_option_on_lock">"While screen is off"</string>
    <string name="zest_maverick_security_setting_option_always">"Always"</string>
    <string name="zest_darq_setting_title">"Enhanced dark mode"</string>
    <string name="zest_darq_setting_summary">"Enable dark mode for all applications."</string>
    <string name="zest_darq_service_connecting">"Connecting to service…"</string>
    <string name="zest_darq_service_sync_success">"Changes synced with service"</string>
    <string name="zest_darq_service_powered_by">"Powered by"</string>
    <string name="zest_darq_service_detail_warning">"Enabling enhanced dark mode for some apps may cause layout issues. Some apps may not be supported."</string>
    <string name="zest_plus_permission_title">"Welcome to Zest+!"</string>
    <string name="zest_plus_permission_summary">"Zest+ enables Fresh to be more powerful with additional features and more. However, this requires Zest to have full access to the system using Magisk.

Your data is important. I promise that no data is being accessed and is sent over, and that your important data remains private.

Would you like to enable Zest+?"</string>
    <string name="zest_protect_battery_title">"Protect battery"</string>
    <string name="zest_protect_battery_summary">"To extend the lifespan of your battery, limit the maximum charge to 85%."</string>
    <string name="qs_dialog_title">"Reboot to Recovery"</string>
    <string name="qs_dialog_confirmation">"Would you like to reboot to Recovery Mode?"</string>
    <string name="qs_dialog_ok">"OK"</string>
    <string name="qs_dialog_cancel">"Cancel"</string>
    <string name="zest_about_page_open_source">"Open-source licenses"</string>
    <string name="zest_about_page_source_code">"Source code"</string>
    <string name="zest_about_page_translations">"Localization"</string>
    <string name="zest_relative_link_wallpaper_twelve">"Wallpaper and style"</string>
    <string name="zest_wlan_connection_icon_wifi6">"Six"</string>
    <string name="zest_wlan_connection_icon_wifi6e">"Six Advanced"</string>
    <string name="fresh_ota_changelog_app_header">"App update information"</string>
    <string name="fresh_ota_changelog_app_subheader">"The apps below may be updated to the latest version after the software update."</string>
    <string name="fresh_ota_changelog_detail_header">"Software update information"</string>
    <string name="fresh_ota_changelog_btn_download">"Download"</string>
    <string name="fresh_ota_changelog_btn_pause">"Pause"</string>
    <string name="fresh_ota_changelog_btn_resume">"Resume"</string>
    <string name="fresh_ota_changelog_btn_install">"Install"</string>
    <string name="fresh_ota_changelog_btn_cancel">"Cancel"</string>
    <string name="fresh_ota_changelog_btn_install_later">"Install later"</string>
    <string name="fresh_ota_checking_for_updates">"Checking for updates…"</string>
    <string name="fresh_ota_verifying_update">"Verifying update…"</string>
    <string name="fresh_permissions_storage_title">"Storage permission not granted"</string>
    <string name="fresh_permissions_storage_description">"Fresh System Services requires storage permissions to be able to receive software and app updates."</string>
    <string name="fresh_permissions_fp_storage_description">"Fresh System Services requires storage permissions to be able to customize fingerprint animation."</string>
    <string name="fresh_ota_changelog_appbar_install_summary">"You won't be able to use your phone during the update, even for emergency calls."</string>
    <string name="fresh_ota_changelog_appbar_waiting">"Waiting for network"</string>
    <string name="fresh_ota_changelog_appbar_paused">"Download paused"</string>
    <string name="fresh_ota_notification_download_cancelled">"Download cancelled"</string>
    <string name="fresh_ota_notification_update_cancelled">"Update cancelled"</string>
    <string name="fresh_ota_changelog_appbar_downloading_time_left">"Time Left:"</string>
    <string name="fresh_ota_changelog_appbar_detail_no_updates">"Your device is up to date"</string>
    <string name="fresh_ota_changelog_appbar_detail_success">"Last successful update"</string>
    <string name="fresh_ota_changelog_appbar_detail_success_subtitle">"%1$s at %2$s"</string>
    <string name="fresh_ota_toast_check_failed_generic">"An unknown error has occurred. Try again later."</string>
    <string name="zest_performance_setting_option_default">"Balanced"</string>
    <string name="zest_performance_setting_option_gaming">"Gaming"</string>
    <string name="zest_performance_setting_option_multitasking">"Multitasking"</string>
    <string name="zest_performance_mode_summary">"Choose the performance mode that works best for what you do."</string>
</resources>